src/objects/Int_Risk_Costs_Movements__c.object
<CustomObject>
    <description>Int Risk Costs Movements</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Risk Costs Movements</relationshipLabel>
        <relationshipName>Int_Risk_Costs_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Costs_Movement_Amount__c</fullName>
        <description>Risk Costs Movement Amount</description>
        <label>Risk Costs Movement Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Costs_Movement_Date__c</fullName>
        <description>Risk Costs Movement Date</description>
        <label>Risk Costs Movement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Costs_Movement_ID__c</fullName>
        <description>Risk Costs Movement ID</description>
        <label>Risk Costs Movement ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Risk_Costs_Movement_Type__c</fullName>
        <description>Risk Costs Movement Type</description>
        <label>Risk Costs Movement Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Int Risk Costs Movements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCM-{0000000000}</displayFormat>
        <label>Risk Costs Movements ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Risk Costs Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>